# servant-hmac-auth

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  circle.yml  servant-hmac-auth.cabal  stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.2.yaml  stack-9.10.3.yaml  stack-9.12.1.yaml  stack-9.12.2.yaml  stack-9.2.8.yaml  stack-9.4.8.yaml  stack-9.6.3.yaml  stack-9.6.6.yaml  stack-9.8.3.yaml  stack.yaml
.github/: haskell-ci.yml
.github/workflows/: haskell-ci.yml
.golden/Servant.Auth.Hmac.Crypto.requestSignature/: golden
examples/client/: Main.hs
examples/server/: Main.hs
src/: ServantHmacAuth.hs
src/Servant/Auth/: Hmac.hs
src/Servant/Auth/Hmac/: Client.hs  Crypto.hs  Internal.hs  Secure.hs  Server.hs
test/Servant/Auth/: HmacSpec.hs
test/Servant/Auth/Hmac/: CryptoSpec.hs  SecureSpec.hs
